tests/syntax_error/first_line_indent.jou
    def foo() -> void:  # Error: expected a C function declaration or a function definition, got more indentation
    return
